# maman14

./: CMakeLists.txt  assembler.h  constsTables.c  constsTables.h  firstRead.c  firstRead.h  labelsQueue.c  labelsQueue.h  main.c  memoryWord.c  memoryWord.h  prog.as  prog2.as  prog3.as  secondRead.c  secondRead.h  symbolList.c  symbolList.h  test.c  test.h  txtAnalyzer.c  txtAnalyzer.h  utils.c  utils.h
running examples/invaid/FirstRead Errors/: firstReadErrors.as  output.txt
running examples/invaid/secondRead Errors/: output.txt  secondReadError.as
running examples/valid/ex2/: ex2.ob  prog.as
running examples/valid/multifiles/: ex3.as
